--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
 							<div class="projcard-innerbox">
 								<img class="projcard-img projcard1-img" src="/assets/img/pioneer.PNG" />
 								<div class="projcard-textbox projcard-textbox1">
-									<div class="projcard-title"><span class="orange-text">Publication</span><h6 style="color:white;"><i>Under Supervision of professor <span class="orange-text">Nuh Aydin</span> of <span class="orange-text">Kenoyn college</span></i></h6></div>
+									<div class="projcard-title"><span class="orange-text">Publication</span><h6 style="color:white;"><i>Under Supervision of professor <span class="orange-text">Nuh Aydin</span> of <span class="orange-text">Kenyon College</span></i></h6></div>
 									<div class="projcard-subtitle"><i>An Analysis of Elliptic Curves Cryptography and its Prospects in a Post-Quantum Future (Pioneer Academics Research)</i></div>
 									<div class="projcard-bar"></div>
 									<div class="projcard-description"><p align="justify" style="color:rgb(194, 194, 194);">Since its pioneer in 1977, RSA has dominated cryptosystems. The security of RSA depends on the hardness
