--- a/blog.html
+++ b/blog.html
@@ -60,7 +60,7 @@
 						<nav class="main-menu">
 							<ul>
 								<li><a href="index.html">Home</a></li>
-								<li class="current-list-item"><a href="blog.html">Blog</a></li>
+								<li><a href="blog.html"  class="current-list-item">Blog</a></li>
 								<li>
 									<div class="header-icons">
 										
@@ -81,7 +81,7 @@
 
 	
 	<!-- breadcrumb-section -->
-	<section class="blog-title">
+	<section class="blog-title" id="blog">
 	<div class="breadcrumb-section breadcrumb-bg">
 		<div class="container">
 			<div class="row">
@@ -97,7 +97,7 @@
 	<!-- end breadcrumb section -->
 
 	<!-- latest news -->
-	<div class="latest-news mt-150 mb-150">
+	<div class="latest-news mt-150 mb-150" id="blog">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-4 col-md-6">
