--- a/index.html
+++ b/index.html
@@ -109,13 +109,16 @@
 	<!-- end hero area -->
 
 	<!-- features list section -->
+
 	<section class="nbout" id="about">
 		<section class="about">
 			<div class="main">
+				<div class="box-aos" data-aos="fade-right" data-aos-duration="800">
 				<div class="wrapper">
-					<div class="box"  data-aos="fade-right" data-aos-duration="800">
+					<div class="box">
 						<img src="assets/img/271654036_3134336553546619_1729818821235408570_n.jpg" alt="">
 					</div>
+				</div>
 				</div>
 				<div class="about-text" data-aos="fade-left" data-aos-duration="1200">
 					<div>	
@@ -267,8 +270,9 @@
 								</div>
 							</div>
 						</div>
-					<div class="projcard-container">
-						<div class="projcard projcard1 projcard-red" data-aos="fade-up-left" data-aos-duration="600">
+					<div class="projcard-container" >
+						<div class="projcard-aos" data-aos="fade-up-left" data-aos-duration="1000">
+						<div class="projcard projcard1 projcard-red">
 							<div class="projcard-innerbox">
 								<img class="projcard-img projcard1-img" src="/assets/img/pioneer.PNG" />
 								<div class="projcard-textbox projcard-textbox1">
@@ -287,7 +291,9 @@
 								</div>
 							</div>
 						</div>
-						<div class="projcard projcard2 projcard-red" data-aos="fade-up-right" data-aos-duration="600">
+					</div>
+					<div class="projcard-aos" data-aos="fade-up-left" data-aos-duration="1000">
+						<div class="projcard projcard2 projcard-red">
 							<div class="projcard-innerbox">
 								<img class="projcard-img projcard2-img" src="/assets/img/the_calculus_of_the_circle.jpg" />
 								<div class="projcard-textbox">
@@ -304,7 +310,9 @@
 								</div>
 							</div>
 						</div>
-						<div class="projcard projcard3 projcard-red" data-aos="fade-up-left" data-aos-duration="600">
+						</div>
+						<div class="projcard-1-aos" data-aos="fade-up-left" data-aos-duration="1000">
+						<div class="projcard projcard3 projcard-red">
 							<div class="projcard-innerbox">
 								<img class="projcard-img" src="/assets/img/thermodynamics_handbook.jpg" />
 								<div class="projcard-textbox projcard-textbox3">
@@ -320,6 +328,7 @@
 			
 								</div>
 							</div>
+						</div>
 						</div>
 
 					</div>
@@ -343,8 +352,8 @@
 			</div>
 
 			<div class="row">
-				<div class="col-lg-4 col-md-6">
-					<div class="single-latest-news" data-aos="fade-right" data-aos-delay="400">
+				<div class="col-lg-4 col-md-6" data-aos="fade-right" data-aos-delay="400">
+					<div class="single-latest-news">
 						<a href="what-is-a-myth.html"><div class="latest-news-bg news-bg-1">
 							<img src="assets/img/what-is-a-myth.png" alt="" height="100%", width="100%">
 						</div></a>
@@ -359,8 +368,8 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-lg-4 col-md-6">
-					<div class="single-latest-news" data-aos="fade-right" data-aos-delay="200">
+				<div class="col-lg-4 col-md-6" data-aos="fade-right" data-aos-delay="200">
+					<div class="single-latest-news">
 						<a href="descartes-first.html"><div class="latest-news-bg news-bg-2">
 							<img src="assets/img/descartes_first_meditation.jpg" alt="" height="100%", width="100%">
 						</div></a>
@@ -375,8 +384,8 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-lg-4 col-md-6 offset-md-3 offset-lg-0">
-					<div class="single-latest-news" data-aos="fade-right">
+				<div class="col-lg-4 col-md-6 offset-md-3 offset-lg-0" data-aos="fade-right">
+					<div class="single-latest-news">
 						<a href="descartes-second.html"><div class="latest-news-bg news-bg-3">
 							<img src="assets/img/descartes_second_meditation.jpg" alt="" height="100%", width="100%">
 						</div></a>
