--- a/index.html
+++ b/index.html
@@ -402,10 +402,14 @@
 					</div>
 				</div>
 			</div>
+			<div class="aos-animate-explore" data-aos="fade-right">
 			<div class="row">
+				
 				<div class="col-lg-12 text-center">
 					<a href="blog.html"><button class="cart-btn"> Explore More of The Blog </button></a>
-				</div>
+
+			</div>
+			</div>
 			</div>
 		</div>
 	</div>
