--- a/index.html
+++ b/index.html
@@ -109,6 +109,75 @@
 	<!-- end hero area -->
 
 
+	<!-- end features list section -->
+
+	<!-- product section -->
+	<section class="projects" id="my_projects">
+	<div class="product-section mt-150 mb-150">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-8 offset-lg-2 text-center">
+					<div class="section-title" data-aos="zoom-in" data-aos-duration="600">	
+						<h3><span class="orange-text">My</span> Projects</h3>
+					</div>
+				</div>
+			</div>
+
+			<div class="owl-carousel owl-theme blog-post">
+
+					<div class="single-product-item" data-aos="fade-left">
+						<div class="product-image">
+							<a href=https://github.com/AhmedMoussa-png/GENERAL-CATALOGUE-OF-VARIABLE-STARS-VISUALIZER><img src="assets/img/products/post-1.jpg" alt="" height="220px"></a>
+						</div>
+						<h3>Variable Stars Visualizer</h3>
+						<div class="content">
+						<p align="justify" style="padding:0 1em 0 1em">The stars above are constantly changing, but usually these changes are too slow or too faint for the eye to see. The project is a web-application aiming at visualizing 100 stars from the General Catalogue For Variable Stars with interactive interface.</p>
+						</div>
+						<a href="https://github.com/AhmedMoussa-png/GENERAL-CATALOGUE-OF-VARIABLE-STARS-VISUALIZER"><button class="cart-btn" style="margin-top: 32px;">Explore</button></a>
+					</div>
+
+					<div class="single-product-item" data-aos="fade-left">
+						<div class="product-image">
+							<a href=https://github.com/AhmedMoussa-png/Neural-style-transfer-Project><img src="assets/img/products/post-2.png" alt="" height="220px"></a>
+						</div>
+						<h3 class="project-title">Neural Style Transfer Project, Van Gogh</h3>
+						<p align="justify" style="padding:0 1em 0 1em">An art/deep learning project for generating starry-night-style pictures of <b>STEM High School For Boys</b>. The technique
+							depends on copying the style of a base image and composing the image desired in that style. </p>
+						<a href="https://github.com/AhmedMoussa-png/Neural-style-transfer-Project"><button class="cart-btn" style="margin-top: 22px;">Explore</button></a>
+					</div>
+					<div class="single-product-item" data-aos="fade-left">
+						<div class="product-image">
+							<a href=https://github.com/AhmedMoussa-png/Elliptic-Curves-Comprehensive-Library><img src="assets/img/products/post-3.png" alt="" height="220px"></a>
+						</div>
+						<h3 class="project-title">Elliptic Curves, A Comprehensive Library</h3>
+						<p align="justify" style="padding:0 1em 0 1em">The Software provides opportunity to investigte the mathematical structure of elliptic curves (adding points, scalar multiples, generator points...etc). The software is also equipped with an encryption and decryption scheme based on El Gamal Encryption.</p>
+						<a href="https://github.com/AhmedMoussa-png/Elliptic-Curves-Comprehensive-Library"><button class="cart-btn">Explore</button></a>
+					</div>
+
+
+					<div class="single-product-item" data-aos="fade-left">
+						<div class="product-image">
+							<a href=https://github.com/AhmedMoussa-png/Physics-Simulations-in-VPython-for-Physics-Course><img src="assets/img/products/post-4.png" alt="" height="220px"></a>
+						</div>
+						<h3 class="project-title">VPython Simulations</h3>
+						<p align="justify" style="padding:0 1em 0 1em">The project consists of 8 simulations for physical systems: Electric field lines for different charge distributions; a simulation for space contraction as a result of very high speeds; a simulation for a solar system of two planets of crossing orbits and a star.</p>
+						<a href="https://github.com/AhmedMoussa-png/Physics-Simulations-in-VPython-for-Physics-Course"><button class="cart-btn" style="margin-top: 30px;"> Explore </button></a>
+					</div>
+				
+
+			</div>
+
+		</div>
+	</div>
+</section>
+	
+
+		
+
+
+
+
+
 		<!-- footer -->
 		<div class="footer-area">
 			<div class="container">
