--- a/index.html
+++ b/index.html
@@ -108,7 +108,40 @@
 	</section>
 	<!-- end hero area -->
 
+	<!-- features list section -->
 
+	<section class="nbout" id="about">
+		<section class="about">
+			<div class="main">
+				<div class="box-aos" data-aos="fade-right" data-aos-duration="800">
+				<div class="wrapper">
+					<div class="box">
+						<img src="assets/img/271654036_3134336553546619_1729818821235408570_n.jpg" alt="">
+					</div>
+				</div>
+				</div>
+				<div class="about-text" data-aos="fade-left" data-aos-duration="1200">
+					<div>	
+						<h1 style="text-align: center;"><span class="white-text">About</span> <span class="white-text"></span> Me</h3>
+					</div>
+					<p style="color: white;">
+						I'm Ahmed Al Sunbati, but you can call me Moussa. I'm a mathematician, researcher, developer, philosopher, and writer. I'm currently enrolled in an Honors
+						curriculum with a STEM emphasis at STEM High School for Boys – 6th of October. I'm fond of music, nature, and arts.  
+					</p>
+					<a href="https://drive.google.com/file/d/1heC-F6UbB2_jC29a570bZu50UF3XttQ-/view?usp=sharing"><button class="cart-btn"> Résumé </button></a>
+					
+				</div>
+			</div>
+		</section>
+		<div class="row">
+			<div class="col-lg-8 offset-lg-2 text-center">
+				<div class="section-title" data-aos="zoom-in" data-aos-duration="600">	
+					<h3 style="font-size:3em;"><span style="color:#fabd44;">Aca</span>demics</h3>
+				</div>
+			</div>
+		</div>
+	
+	</section>
 	<!-- end features list section -->
 
 	<!-- product section -->
