--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
 	<!-- features list section -->
 
 	<section class="nbout" id="about">
-		<section class="about">
-			<div class="main">
+
+			<div class="row main">
 				<div class="box-aos" data-aos="fade-right" data-aos-duration="800">
 				<div class="wrapper">
 					<div class="box">
@@ -121,7 +121,7 @@
 				</div>
 				</div>
 				<div class="about-text" data-aos="fade-left" data-aos-duration="1200">
-					<div>	
+					<div class="h1-text">	
 						<h1 style="text-align: center;"><span class="white-text">About</span> <span class="white-text"></span> Me</h3>
 					</div>
 					<p style="color: white;">
@@ -132,7 +132,7 @@
 					
 				</div>
 			</div>
-		</section>
+
 		<div class="row">
 			<div class="col-lg-8 offset-lg-2 text-center">
 				<div class="section-title" data-aos="zoom-in" data-aos-duration="600">	
