--- a/index.html
+++ b/index.html
@@ -140,6 +140,62 @@
 				</div>
 			</div>
 		</div>
+		<div class="bontainer row">
+			<div class="cbard" data-aos="fade-right" data-aos-delay="600">
+			  <div class="face face1">
+				<div class="content">
+					<div class="icon">
+						4.0
+					</div>
+					<div class="info">
+						<h3>Cummulative GPA</h3>
+						<p>
+						<b>Out of 4.0 unweighted GPA through the 3 years of high school.</b>
+						</p>
+					</div>
+				</div>
+			  </div>
+			  <div class="face face2">
+				<h3>GPA</h3>
+			  </div>
+			</div>
+			<div class="cbard" data-aos="fade-right" data-aos-delay="300">
+				<div class="face face1">
+				  <div class="content">
+					<div class="icon">
+						35
+					</div>
+					<div class="info">
+						<h3>ACT</h3>
+						<p>
+						<b>36 Math, 35 Science, 34 English, and 33 Reading.</b>
+						</p>
+					</div>
+				  </div>
+				</div>
+				<div class="face face2">
+				  <h3>ACT</h3>
+				</div>
+			  </div>
+			  <div class="cbard" data-aos="fade-right">
+				<div class="face face1">
+				  <div class="content">
+					<div class="icon">
+						114
+					</div>
+					<div class="info">
+						<h3>TOEFL iBT</h3>
+						<p>
+							<b> 30 Reading, 30 Listening, 27 Writing, 27 Speaking. </b>
+						</p>
+					</div>
+				  </div>
+				</div>
+				<div class="face face2">
+				  <h3 style="text-align: center;">TOEFL iBT</h3>
+				</div>
+			  </div>
+		  </div>
 	
 	</section>
 	<!-- end features list section -->
