--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 		<div class="row">
 			<div class="col-lg-8 offset-lg-2 text-center">
 				<div class="section-title" data-aos="zoom-in" data-aos-duration="600">	
-					<h3 style="font-size:3em;"><span style="color:#fabd44;">Aca</span>demics</h3>
+					<h3 style="font-size:3em; margin-top: 30px;"><span style="color:#fabd44;">Aca</span>demics</h3>
 				</div>
 			</div>
 		</div>
