--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
 
 	<!-- features list section -->
 
-	<section class="nbout pt-100 pb-100" id="about">
-
+	<section class="nbout" id="about">
+<div class="container">
 			<div class="row main">
 				<div class="box-aos" data-aos="fade-right" data-aos-duration="800">
 				<div class="wrapper">
@@ -120,7 +120,7 @@
 					</div>
 				</div>
 				</div>
-				<div class="about-text" data-aos="fade-left" data-aos-duration="1200">
+				<div class="about-text" data-aos="zoom-in" data-aos-duration="1200">
 					<div class="h1-text">	
 						<h1 style="text-align: center;"><span class="white-text">About</span> <span class="white-text"></span> Me</h3>
 					</div>
@@ -141,7 +141,7 @@
 			</div>
 		</div>
 		<div class="bontainer row">
-			<div class="cbard" data-aos="fade-right" data-aos-delay="600">
+			<div class="cbard" data-aos="fade-right" data-aos-delay="600" style="width:70%;">
 			  <div class="face face1">
 				<div class="content">
 					<div class="icon">
@@ -159,7 +159,7 @@
 				<h3>GPA</h3>
 			  </div>
 			</div>
-			<div class="cbard" data-aos="fade-right" data-aos-delay="300">
+			<div class="cbard" data-aos="fade-right" data-aos-delay="300" style="width:70%;">
 				<div class="face face1">
 				  <div class="content">
 					<div class="icon">
@@ -177,7 +177,8 @@
 				  <h3>ACT</h3>
 				</div>
 			  </div>
-			  <div class="cbard" data-aos="fade-right">
+			  <div data-aos="fade-right">
+			  <div class="cbard cbard3" style="width:70%;">
 				<div class="face face1">
 				  <div class="content">
 					<div class="icon">
@@ -195,8 +196,9 @@
 				  <h3 style="text-align: center;">TOEFL iBT</h3>
 				</div>
 			  </div>
+			</div>
 		  </div>
-
+		</div>
 	</section>
 	<!-- end features list section -->
 
@@ -263,9 +265,8 @@
 				<!-- cart banner section -->
 
 				<section id="publications">
-					<div class="latest-news latest-news1 pt-150 pb-150">
+					<div class="latest-news latest-news1">
 						<div class="container">
-				
 							<div class="row">
 								<div class="col-lg-8 offset-lg-2 text-center">
 									<div class="section-title" data-aos="zoom-in" data-aos-duration="600">	
@@ -273,10 +274,9 @@
 									</div>
 								</div>
 							</div>
-				
 
 								<div class="projcard-container" >
-									<div class="projcard-aos" data-aos="fade-up-left" data-aos-duration="1000">
+									<div class="projcard-aos" data-aos="zoom-in" data-aos-duration="1000">
 									<div class="projcard projcard1 projcard-red">
 										<div class="projcard-innerbox">
 											<img class="projcard-img projcard1-img" src="/assets/img/pioneer.PNG" />
@@ -297,7 +297,7 @@
 										</div>
 									</div>
 								</div>
-								<div class="projcard-aos" data-aos="fade-up-left" data-aos-duration="1000">
+								<div class="projcard-aos" data-aos="zoom-in" data-aos-duration="1000">
 									<div class="projcard projcard2 projcard-red">
 										<div class="projcard-innerbox">
 											<img class="projcard-img projcard2-img" src="/assets/img/the_calculus_of_the_circle.jpg" />
@@ -316,7 +316,7 @@
 										</div>
 									</div>
 									</div>
-									<div class="projcard-1-aos" data-aos="fade-up-left" data-aos-duration="1000">
+									<div class="projcard-1-aos" data-aos="zoom-in" data-aos-duration="1000">
 									<div class="projcard projcard3 projcard-red">
 										<div class="projcard-innerbox">
 											<img class="projcard-img" src="/assets/img/thermodynamics_handbook.jpg" />
@@ -347,8 +347,6 @@
 							</div>
 							</div>
 							</div>
-						</div>
-					</div>
 					</section>
 						<!-- end cart banner section -->
 
