--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 						<div class="content">
 						<p align="justify" style="padding:0 1em 0 1em">The stars above are constantly changing, but usually these changes are too slow or too faint for the eye to see. The project is a web-application aiming at visualizing 100 stars from the General Catalogue For Variable Stars with interactive interface.</p>
 						</div>
-						<a href="https://github.com/AhmedMoussa-png/GENERAL-CATALOGUE-OF-VARIABLE-STARS-VISUALIZER"><button class="cart-btn" style="margin-top: 32px;">Explore</button></a>
+						<a href="https://github.com/AhmedMoussa-png/GENERAL-CATALOGUE-OF-VARIABLE-STARS-VISUALIZER"><button class="cart-btn">Explore</button></a>
 					</div>
 
 					<div class="single-product-item" data-aos="fade-left">
@@ -234,7 +234,7 @@
 						<h3 class="project-title">Neural Style Transfer Project, Van Gogh</h3>
 						<p align="justify" style="padding:0 1em 0 1em">An art/deep learning project for generating starry-night-style pictures of <b>STEM High School For Boys</b>. The technique
 							depends on copying the style of a base image and composing the image desired in that style. </p>
-						<a href="https://github.com/AhmedMoussa-png/Neural-style-transfer-Project"><button class="cart-btn" style="margin-top: 22px;">Explore</button></a>
+						<a href="https://github.com/AhmedMoussa-png/Neural-style-transfer-Project"><button class="cart-btn">Explore</button></a>
 					</div>
 					<div class="single-product-item" data-aos="fade-left">
 						<div class="product-image">
@@ -252,7 +252,7 @@
 						</div>
 						<h3 class="project-title">VPython Simulations</h3>
 						<p align="justify" style="padding:0 1em 0 1em">The project consists of 8 simulations for physical systems: Electric field lines for different charge distributions; a simulation for space contraction as a result of very high speeds; a simulation for a solar system of two planets of crossing orbits and a star.</p>
-						<a href="https://github.com/AhmedMoussa-png/Physics-Simulations-in-VPython-for-Physics-Course"><button class="cart-btn" style="margin-top: 30px;"> Explore </button></a>
+						<a href="https://github.com/AhmedMoussa-png/Physics-Simulations-in-VPython-for-Physics-Course"><button class="cart-btn"> Explore </button></a>
 					</div>
 				
 
@@ -266,7 +266,7 @@
 
 				<section id="publications">
 					<div class="latest-news latest-news1">
-						<div class="container">
+						<div class="container" style="transform: translateX(-8%);">
 							<div class="row">
 								<div class="col-lg-8 offset-lg-2 text-center">
 									<div class="section-title" data-aos="zoom-in" data-aos-duration="600">	
@@ -374,12 +374,9 @@
 							<div class="news-text-box">
 								<h3><a href="what-is-a-myth.html">What Is A Myth?</a></h3>
 								<p class="excerpt" align="justify">In primitive societies, mythology infilitrated every aspect of society, engraved deeply into the soul of each individual in the society to the degree that deconstructing the mythology of a society was equivalent to deconstructing the society itself and its death. </p>
-								<a href="what-is-a-myth.html"><button class="read-more" style="margin-top: -8px;"> Read More </button></a>
+
 							</div>
-							<div class="read-more-bar">
-	
-								<div class="blog-bar blog-bar1"></div>
-							</div>
+							<a href="what-is-a-myth.html"><button class="read-more"> Read More </button></a>
 						</div>
 					</div>
 					<div class="col-lg-4 col-md-6" data-aos="fade-right" data-aos-delay="200">
@@ -390,12 +387,9 @@
 							<div class="news-text-box">
 								<h3><a href="descartes-first.html">Descrates' First Meditation</a></h3>
 								<p class="excerpt" align="justify">What is the truth? Is it the set of beliefs we are endowed with when we were born? How many times did we find that something we used to believe as children turned out to be some kind work of a devil trying to decieve us?</p>
-								<a href="descartes-first.html"><button class="read-more" style="margin-top: 37px;"> Read More </button> </a>
+
 							</div>
-							<div class="read-more-bar">
-	
-								<div class="blog-bar blog-bar2"></div>
-							</div>
+							<a href="descartes-first.html"><button class="read-more"> Read More </button> </a>
 						</div>
 					</div>
 					<div class="col-lg-4 col-md-6 offset-md-3 offset-lg-0" data-aos="fade-right">
@@ -405,13 +399,10 @@
 							</div></a>
 							<div class="news-text-box">
 								<h3><a href="descartes-second.html">Descrates' Second Meditation</a></h3>
-								<p class="excerpt" align="justify">So, in the last meditation we reached a dead-end. Descartes decided that everything that was taken for granted to be true is not any less false than the myth of Santa Claus. The corporal nature of the world was no longer evident and clear as it once seemed to be.</p>
-								<a href="descartes-second.html"> <button class="read-more"> Read More </button> </a>
+								<p class="excerpt" align="justify" style="overflow: hidden;">So, in the last meditation we reached a dead-end. Descartes decided that everything that was taken for granted to be true is not any less false than the myth of Santa Claus. The corporal nature of the world was no longer evident and clear as it once seemed to be.</p>
+
 							</div>
-							<div class="read-more-bar">
-	
-								<div class="blog-bar blog-bar3"></div>
-							</div>
+							<a href="descartes-second.html"> <button class="read-more"> Read More </button> </a>
 							
 						</div>
 					</div>
