--- a/index.html
+++ b/index.html
@@ -377,6 +377,10 @@
 
 							</div>
 							<a href="what-is-a-myth.html"><button class="read-more"> Read More </button></a>
+							<div class="read-more-bar">
+	
+								<div class="blog-bar blog-bar1"></div>
+							</div>
 						</div>
 					</div>
 					<div class="col-lg-4 col-md-6" data-aos="fade-right" data-aos-delay="200">
@@ -390,6 +394,10 @@
 
 							</div>
 							<a href="descartes-first.html"><button class="read-more"> Read More </button> </a>
+							<div class="read-more-bar">
+	
+								<div class="blog-bar blog-bar1"></div>
+							</div>
 						</div>
 					</div>
 					<div class="col-lg-4 col-md-6 offset-md-3 offset-lg-0" data-aos="fade-right">
@@ -403,7 +411,10 @@
 
 							</div>
 							<a href="descartes-second.html"> <button class="read-more"> Read More </button> </a>
-							
+							<div class="read-more-bar">
+	
+								<div class="blog-bar blog-bar1"></div>
+							</div>
 						</div>
 					</div>
 				</div>
