--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 	<!-- features list section -->
 
 	<section class="nbout" id="about">
-<div class="smth">
+<div class="container-fluid">
 			<div class="row main">
 				<div class="box-aos" data-aos="fade-right" data-aos-duration="800">
 				<div class="wrapper">
@@ -142,7 +142,7 @@
 		</div>
 
 		<div class="bontainer">
-			<div class="cbard" data-aos="fade-right" data-aos-delay="600" style="width:70%;">
+			<div class="cbard" data-aos="fade-right" data-aos-delay="600" style="width:90%;">
 			  <div class="face face1">
 				<div class="content">
 					<div class="icon">
@@ -160,7 +160,7 @@
 				<h3>GPA</h3>
 			  </div>
 			</div>
-			<div class="cbard" data-aos="fade-right" data-aos-delay="300" style="width:70%;">
+			<div class="cbard" data-aos="fade-right" data-aos-delay="300" style="width:90%;">
 				<div class="face face1">
 				  <div class="content">
 					<div class="icon">
@@ -179,7 +179,7 @@
 				</div>
 			  </div>
 			  <div data-aos="fade-right">
-			  <div class="cbard cbard3" style="width:70%;">
+			  <div class="cbard cbard3" style="width:90%;">
 				<div class="face face1">
 				  <div class="content">
 					<div class="icon">
