--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 				<div class="col-lg-9 offset-lg-2 text-center">
 					<div class="hero-text">
 						<div class="hero-text-tablecell">
-							<h1 data-aos="fade-down" data-aos-duration="2000"><span class="orange-text">Math</span>ilosophy</h1>
+							<h1 data-aos="fade-down" data-aos-duration="2000"><span class="orange-text">What</span>ever</h1>
 						</div>
 					</div>
 				</div>
@@ -116,7 +116,7 @@
 				<div class="box-aos" data-aos="fade-right" data-aos-duration="800">
 				<div class="wrapper">
 					<div class="box">
-						<img src="assets/img/271654036_3134336553546619_1729818821235408570_n.jpg" alt="">
+						<img src="assets/img/cropped-1.jpg" alt="">
 					</div>
 				</div>
 				</div>
@@ -125,8 +125,7 @@
 						<h1 style="text-align: center;"><span class="white-text">About</span> <span class="white-text"></span> Me</h3>
 					</div>
 					<p style="color: white;">
-						I'm Ahmed Al Sunbati, but you can call me Moussa. I'm a mathematician, researcher, developer, philosopher, and writer. I'm currently enrolled in an Honors
-						curriculum with a STEM emphasis at STEM High School for Boys – 6th of October. I'm fond of music, nature, and arts.  
+						I'm Ahmed Al Sunbati, but I just go by Moussa. I'm a mathematics enthusiast, aspiring software engineer, part-time philosopher, and writer. I graduated from STEM High School for Boys – 6th of October and currently a freshman @ <span style="color: #00693e;"><a href="https://home.dartmouth.edu/dartmouth" style="color:#00693e;">Dartmouth College</a></span>. Hopefully, I'm pursuing a double major in Computer Science and English Literature with concenteration in Creative Writing, but I'm also excited to explore courses beyond them such as in philosophy, music and possibly a minor in Japanese languauge & Asian Cultures. 
 					</p>
 					<a href="https://drive.google.com/file/d/1fRqqzGMgOuXBxEfIWaKnAULKXK7OsoPr/view?usp=sharing"><button class="cart-btn"> Résumé </button></a>
 					
@@ -137,6 +136,7 @@
 			<div class="col-lg-8 offset-lg-2 text-center">
 				<div class="section-title" data-aos="zoom-in" data-aos-duration="600">	
 					<h3 style="font-size:3em; margin-top: 30px;"><span style="color:#fabd44;">Aca</span>demics</h3>
+					<h4>(This section has not been updated yet. The information provided is that of my high school years)</h4>
 				</div>
 			</div>
 		</div>
@@ -438,7 +438,6 @@
 						<div class="footer-box get-in-touch">
 							<h2 class="widget-title">Get in Touch</h2>
 							<ul>
-								<li>65 Ahmed Abdel Aziz Street, El Nahal</li>
 								<li>aelsonbaty879@gmail.com</li>
 								<li>+20 1020 96 5356</li>
 							</ul>
