--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 				<div class="col-lg-9 offset-lg-2 text-center">
 					<div class="hero-text">
 						<div class="hero-text-tablecell">
-							<h1 data-aos="fade-down" data-aos-duration="2000"><span class="orange-text">What</span>ever</h1>
+							<h1 data-aos="fade-down" data-aos-duration="2000"><span class="orange-text">Ahmed</span> Al Sunbati</h1>
 						</div>
 					</div>
 				</div>
