--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 						<h1 style="text-align: center;"><span class="white-text">About</span> <span class="white-text"></span> Me</h3>
 					</div>
 					<p style="color: white;">
-						I'm Ahmed Al Sunbati, but I just go by Moussa. I'm a mathematics enthusiast, aspiring software engineer, part-time philosopher, and writer. I graduated from STEM High School for Boys – 6th of October and currently a freshman @ <span style="color: #00693e;"><a href="https://home.dartmouth.edu/dartmouth" style="color:#00693e;">Dartmouth College</a></span>. Hopefully, I'm pursuing a double major in Computer Science and English Literature with concenteration in Creative Writing, but I'm also excited to explore courses beyond them such as in philosophy, music and possibly a minor in Japanese languauge & Asian Cultures. 
+						I'm Ahmed Al Sunbati, but I just go by Moussa. I'm a mathematics enthusiast, aspiring software engineer, part-time philosopher, and writer. I graduated from STEM High School for Boys – 6th of October and currently a freshman @ <span style="color: #00693e;"><a href="https://home.dartmouth.edu/dartmouth" style="color:#00693e;">Dartmouth College</a></span>. Hopefully, I'm pursuing a double major in Computer Science and Mathematics, but I'm also excited to explore courses beyond them such as in philosophy, music and possibly a minor in Japanese languauge & Asian Cultures. 
 					</p>
 					<a href="https://drive.google.com/file/d/1fRqqzGMgOuXBxEfIWaKnAULKXK7OsoPr/view?usp=sharing"><button class="cart-btn"> Résumé </button></a>
 					
